--- a/src/scss/palm/image.scss
+++ b/src/scss/palm/image.scss
@@ -1,3 +1,3 @@
 img.image {
-    max-width: 100%;
+    width: 100%;
 }
